force-app/main/default/objects/Meeting_Debrief__c/Meeting_Debrief__c.object-meta.xml
<CustomObject>
    <label>Meeting Debrief</label>
    <nameField>
        <displayFormat>MD-{000000}</displayFormat>
        <label>Meeting Debrief Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Debriefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>