force-app/main/default/objects/Meeting_Debrief__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <description>AI-generated action items from the meeting.</description>
    <label>Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>