force-app/main/default/objects/Meeting_Debrief__c/fields/Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Key_Points__c</fullName>
    <description>AI-generated bullet points summarizing the key points.</description>
    <label>Key Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>