force-app/main/default/objects/Meeting_Debrief__c/fields/Manager_Summary__c.field-meta.xml
<CustomField>
    <fullName>Manager_Summary__c</fullName>
    <description>One-line manager briefing.</description>
    <label>Manager Summary</label>
    <type>TextArea</type>
</CustomField>