force-app/main/default/objects/Meeting_Debrief__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>The raw input notes from the meeting.</description>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>