force-app/main/default/objects/Meeting_Debrief__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <description>Which AI model was used to generate this debrief.</description>
    <label>Model Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>