force-app/main/default/objects/Meeting_Debrief__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>AI-generated next steps.</description>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>