force-app/main/default/objects/Meeting_Debrief__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account for this debrief.</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Debriefs</relationshipLabel>
    <relationshipName>Meeting_Debriefs</relationshipName>
    <type>Lookup</type>
</CustomField>