force-app/main/default/objects/Meeting_Debrief__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Case for this debrief.</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Meeting Debriefs</relationshipLabel>
    <relationshipName>Meeting_Debriefs</relationshipName>
    <type>Lookup</type>
</CustomField>