force-app/main/default/objects/Meeting_Debrief__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity for this debrief.</description>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meeting Debriefs</relationshipLabel>
    <relationshipName>Meeting_Debriefs</relationshipName>
    <type>Lookup</type>
</CustomField>